Registracion de Usuarios

--- a/ada3d_v70/AppProperties/database.properties
+++ b/ada3d_v70/AppProperties/database.properties
@@ -5,9 +5,9 @@
  increasemaxfields='true' overwritefreespace='false' softdeletionsexpirein='360'
  uselz1='true'>
 <databaseinfo dbid='832580D00002DACB' odsversion='43' diskspace='10223616'
- percentused='52.6292067307692' numberofdocuments='1'><datamodified><datetime
- dst='true'>20170315T205600,49-02</datetime></datamodified><designmodified
-><datetime dst='true'>20170515T205357,34-02</datetime></designmodified></databaseinfo>
+ percentused='52.2160456730769' numberofdocuments='1'><datamodified><datetime
+ dst='true'>20170526T020020,83-02</datetime></datamodified><designmodified
+><datetime dst='true'>20170624T124009,15-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' consistentacl='true' maxinternetaccess='editor'>
 <aclentry name='-Default-' default='true' level='noaccess' readpublicdocs='false'
  writepublicdocs='false'/>
@@ -20,9 +20,11 @@
 <aclentry name='CN=ADMINISTRADOR DOMINO/O=Sasa' type='person' level='manager'
  deletedocs='true'/>
 <aclentry name='CN=Pedro Marcano/O=SASA' type='person' level='manager' deletedocs='true'/>
-<aclentry name='CN=Fernando Rodriguez/O=SASA' type='person' level='manager'
- deletedocs='true'/>
+<aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
+<logentry>24/06/2017 12:38:32 PM ADMINISTRADOR DOMINO/SASA updated LocalDomainAdmins</logentry>
+<logentry>24/06/2017 12:38:27 PM ADMINISTRADOR DOMINO/SASA added LocalDomainAdmins</logentry>
+<logentry>06/24/2017 12:23:12 PM ADA3D/SASA deleted Fernando Rodriguez/SASA</logentry>
 <logentry>16/03/2017 08:48:25 PM Pedro Marcano/SASA updated Anonymous</logentry>
 <logentry>06/03/2017 08:03:59 PM Pedro Marcano/SASA updated Victor Paschetta/SASA</logentry>
 <logentry>06/03/2017 08:03:49 PM Pedro Marcano/SASA added Victor Paschetta/SASA</logentry>
@@ -39,10 +41,7 @@
 <logentry>06/03/2017 07:20:12 PM Pedro Marcano/SASA updated Anonymous</logentry>
 <logentry>03/03/2017 05:22:59 PM Pedro Marcano/SASA updated -Default-</logentry>
 <logentry>03/03/2017 05:22:23 PM Pedro Marcano/SASA updated Anonymous</logentry>
-<logentry>03/03/2017 05:22:14 PM Pedro Marcano/SASA added Anonymous</logentry>
-<logentry>27/02/2017 05:23:50 PM Pedro Marcano/SASA updated -Default-</logentry>
-<logentry>27/02/2017 05:21:45 PM ADMINISTRADOR DOMINO/SASA updated Pedro Marcano/SASA</logentry>
-<logentry>27/02/2017 04:11:31 PM Pedro Marcano/SASA updated Pedro Marcano/SASA</logentry></acl>
+<logentry>03/03/2017 05:22:14 PM Pedro Marcano/SASA added Anonymous</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='principal'/><weblaunch
  whenopened='openxpage' xpage='inicio.xsp'/></launchsettings>
