--- a/ada_config_v1r1/AppProperties/database.properties
+++ b/ada_config_v1r1/AppProperties/database.properties
@@ -3,9 +3,9 @@
  replicaid='832581A1004F6F08' path='CN=ADA3D/O=SASA!!ADA3D\ada_config.nsf'
  title='ADA3D Configuracion'>
 <databaseinfo dbid='832581A1004F6F08' odsversion='43' diskspace='1015808'
- percentused='95.4889112903226' numberofdocuments='39'><datamodified><datetime
+ percentused='95.5141129032258' numberofdocuments='39'><datamodified><datetime
  dst='true'>20170922T145839,58-02</datetime></datamodified><designmodified
-><datetime dst='true'>20170925T110242,33-02</datetime></designmodified></databaseinfo>
+><datetime dst='true'>20170925T114911,07-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <aclentry name='-Default-' default='true' level='noaccess' readpublicdocs='false'
  writepublicdocs='false'/>
@@ -14,9 +14,13 @@
 <aclentry name='Anonymous' level='noaccess' readpublicdocs='false' writepublicdocs='false'/>
 <aclentry name='CN=ADMINISTRADOR DOMINO/O=SASA' type='person' level='manager'
  deletedocs='true'/>
+<aclentry name='ada_config' type='persongroup' level='reader' createpersonalagents='false'
+ createpersonalviews='false' createlsjavaagents='false' writepublicdocs='true'/>
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
+<logentry>25/09/2017 11:45:12 AM Notes Standard Control/SASA updated ada_config</logentry>
+<logentry>25/09/2017 11:44:56 AM Notes Standard Control/SASA added ada_config</logentry>
 <logentry>21/09/2017 03:41:53 PM Notes Standard Control/SASA pasted entire ACL</logentry>
 <logentry>21/09/2017 03:41:13 PM Notes Standard Control/SASA updated ADMINISTRADOR DOMINO/SASA</logentry>
 <logentry>21/09/2017 03:41:08 PM Notes Standard Control/SASA added ADMINISTRADOR DOMINO/SASA</logentry>
@@ -33,8 +37,6 @@
 <logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin added Demo/LinQed</logentry>
 <logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin added OtherDomainServers</logentry>
 <logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin updated -Default-</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin deleted role </logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin deleted role </logentry>
 <logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin deleted role </logentry>
 <logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin deleted role </logentry></acl>
 
