--- a/L0000_v1r1/AppProperties/database.properties
+++ b/L0000_v1r1/AppProperties/database.properties
@@ -4,9 +4,9 @@
  fromtemplate='L0000_v1r1' allowstoredforms='false' increasemaxfields='true'
  uselz1='true'>
 <databaseinfo dbid='832581A1004C0C0C' odsversion='43' diskspace='6291456'
- percentused='31.7586263020833' numberofdocuments='14'><datamodified><datetime
+ percentused='32.0353190104167' numberofdocuments='14'><datamodified><datetime
  dst='true'>20170925T124551,63-02</datetime></datamodified><designmodified
-><datetime dst='true'>20170929T155026,60-02</datetime></designmodified></databaseinfo>
+><datetime dst='true'>20171005T191329,37-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <aclentry name='-Default-' default='true' level='noaccess' readpublicdocs='false'
@@ -43,13 +43,14 @@
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='11e' unid='38B293AF18DBC40A03258146006BE942' sequence='33'>
+<noteinfo noteid='11e' unid='38B293AF18DBC40A03258146006BE942' sequence='36'>
 <created><datetime>20170621T163840,66-03</datetime></created>
-<modified><datetime dst='true'>20170929T155026,60-02</datetime></modified>
-<revised><datetime dst='true'>20170929T155026,59-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20170929T155026,60-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20171005T191329,37-02</datetime></modified>
+<revised><datetime dst='true'>20171005T191329,36-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171005T191329,37-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20170920T115038,72-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
+>CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
 >CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
 >CN=Notes Standard Control/O=SASA</name></updatedby>
 <item name='IconBitmap' summary='true'>
@@ -74,8 +75,8 @@ AAAAUEECICABAAD/////+A4DgA==
 <item name='$TITLE'><text>Diseño Base
 #2L0000_v1r1</text></item>
 <item name='$FlagsNoRefresh'><text>rv</text></item>
-<item name='$PIRCRefreshModTime'><datetime>20170929T155052,86-03</datetime></item>
-<item name='$TemplateModTime'><datetime dst='true'>20170929T155012,59-02</datetime></item>
+<item name='$PIRCRefreshModTime'><datetime>20171005T191357,20-03</datetime></item>
+<item name='$TemplateModTime'><datetime dst='true'>20171005T191310,50-02</datetime></item>
 <item name='$TemplateServerName'><text>CN=Notes Standard Control/O=SASA</text></item>
 <item name='$TemplateFileName'><text>CN=ADA3D/O=SASA!!ADA3D\L0000_v1r1.ntf</text></item>
 <item name='$Daos'><text>0</text></item>
