--- a/L8669/.settings/org.eclipse.core.resources.prefs
+++ b/L8669/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Wed Sep 27 19:30:11 ART 2017
+#Fri Oct 13 10:32:13 ART 2017
+encoding//Resources/StyleSheets/cuadros.css=UTF-8
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/bootstrap-extended.css=UTF-8
 encoding//Resources/StyleSheets/bootstrapSubmenu.css=UTF-8
