--- a/ada_config_v1r1/AppProperties/database.properties
+++ b/ada_config_v1r1/AppProperties/database.properties
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
-<database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.0'
+<database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
  replicaid='832581A1004F6F08' path='CN=ADA3D/O=SASA!!ADA3D\ada_config.nsf'
  title='ADA3D Configuracion'>
-<databaseinfo dbid='832581A1004F6F08' odsversion='43' diskspace='1015808'
- percentused='95.5141129032258' numberofdocuments='39'><datamodified><datetime
- dst='true'>20170922T145839,58-02</datetime></datamodified><designmodified
-><datetime dst='true'>20170925T114911,07-02</datetime></designmodified></databaseinfo>
-<acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
+<databaseinfo dbid='832581A1004F6F08' odsversion='43' diskspace='1290240'
+ percentused='83.8888888888889' numberofdocuments='44'><datamodified><datetime
+ dst='true'>20171025T133153,91-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171025T203459,11-02</datetime></designmodified></databaseinfo>
+<acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='reader'>
 <aclentry name='-Default-' default='true' level='noaccess' readpublicdocs='false'
  writepublicdocs='false'/>
 <aclentry name='OtherDomainServers' type='servergroup' level='noaccess' readpublicdocs='false'
@@ -19,6 +19,19 @@
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
+<aclentry name='Desarrollo' type='persongroup' level='designer' deletedocs='true'
+ createlsjavaagents='true'/>
+<logentry>25/10/2017 02:38:46 PM Notes Standard Control/SASA updated ada_config</logentry>
+<logentry>25/10/2017 02:38:38 PM Notes Standard Control/SASA added ada_config</logentry>
+<logentry>25/10/2017 02:38:22 PM Notes Standard Control/SASA updated Anonymous</logentry>
+<logentry>25/10/2017 02:32:40 PM Notes Standard Control/SASA deleted ada_config</logentry>
+<logentry>25/10/2017 02:32:39 PM Notes Standard Control/SASA updated Anonymous</logentry>
+<logentry>20/10/2017 12:33:49 PM Notes Standard Control/SASA updated Desarrollo</logentry>
+<logentry>20/10/2017 12:33:41 PM Notes Standard Control/SASA added Desarrollo</logentry>
+<logentry>04/10/2017 07:43:01 PM Notes Standard Control/SASA updated ada_config</logentry>
+<logentry>04/10/2017 07:40:49 PM Notes Standard Control/SASA updated ada_config</logentry>
+<logentry>04/10/2017 07:40:37 PM Notes Standard Control/SASA updated ada_config</logentry>
+<logentry>04/10/2017 07:39:24 PM Notes Standard Control/SASA updated ada_config</logentry>
 <logentry>25/09/2017 11:45:12 AM Notes Standard Control/SASA updated ada_config</logentry>
 <logentry>25/09/2017 11:44:56 AM Notes Standard Control/SASA added ada_config</logentry>
 <logentry>21/09/2017 03:41:53 PM Notes Standard Control/SASA pasted entire ACL</logentry>
@@ -27,18 +40,7 @@
 <logentry>21/09/2017 03:40:36 PM Notes Standard Control/SASA updated -Default-</logentry>
 <logentry>21/09/2017 03:40:30 PM Notes Standard Control/SASA updated Anonymous</logentry>
 <logentry>21/09/2017 02:12:32 PM Notes Standard Control/SASA updated ADA3D/SASA</logentry>
-<logentry>19/09/2017 02:35:04 PM Notes Standard Control/SASA deleted Demo/LinQed</logentry>
-<logentry>19/09/2017 02:34:53 PM Notes Standard Control/SASA updated ADA3D/SASA</logentry>
-<logentry>19/09/2017 02:34:47 PM Notes Standard Control/SASA added ADA3D/SASA</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin updated Demo/LinQed</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin added LocalDomainServers</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin added LocalDomainAdmins</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin added Anonymous</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin added Demo/LinQed</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin added OtherDomainServers</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin updated -Default-</logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin deleted role </logentry>
-<logentry>21/06/2017 06:04:12 PM Pepe Administrator/axin deleted role </logentry></acl>
+<logentry>19/09/2017 02:35:04 PM Notes Standard Control/SASA deleted Demo/LinQed</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'/></launchsettings>
 <note default='true' class='icon'>
