--- a/L0000_v1r1/AppProperties/database.properties
+++ b/L0000_v1r1/AppProperties/database.properties
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
- replicaid='832581C5004DA004' path='CN=ADA3D/O=SASA!!L0000.ntf' title='Template L0000'
+ replicaid='832581C5006FCB3B' path='CN=ADA3D/O=SASA!!L0000.ntf' title='Template L0000'
  templatename='L0000v1r1' allowstoredforms='false' maintainunread='false'
  optimizetablebitmaps='true' allowsoftdeletion='true' increasemaxfields='true'
  compressdesign='true' overwritefreespace='false' uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='832581C5004DA004' odsversion='43' diskspace='1622016'
- percentused='80.1925505050505' numberofdocuments='0'><datamodified><datetime
- dst='true'>20171026T140833,53-02</datetime></datamodified><designmodified
-><datetime dst='true'>20171026T153921,82-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='832581C5006FCB3B' odsversion='43' diskspace='1277952'
+ percentused='99.2588141025641' numberofdocuments='0'><datamodified><datetime
+ dst='true'>20171026T182111,19-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171026T182124,62-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -17,40 +17,49 @@
  writepublicdocs='false'/>
 <aclentry name='Anonymous' type='person' level='noaccess' readpublicdocs='false'
  writepublicdocs='false'/>
+<aclentry name='CN=Notes Standard Control/O=SASA' type='person' level='manager'
+ deletedocs='true'/>
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
-<logentry>26/10/2017 12:09:23 PM Notes Standard Control/SASA deleted Notes Standard Control/SASA</logentry>
-<logentry>26/10/2017 12:09:17 PM Notes Standard Control/SASA deleted 8669</logentry>
-<logentry>26/10/2017 12:09:14 PM Notes Standard Control/SASA deleted 866911860269</logentry>
-<logentry>25/10/2017 06:31:18 PM Notes Standard Control/SASA updated 866911860269</logentry>
-<logentry>25/10/2017 06:29:27 PM Notes Standard Control/SASA updated 866911860269</logentry>
-<logentry>25/10/2017 03:19:37 PM Notes Standard Control/SASA updated role [usrInitial]</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA updated 866911860269</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA updated LocalDomainServers</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA updated LocalDomainAdmins</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA updated Anonymous</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA added OtherDomainServers</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA added LocalDomainServers</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA added 866911860269</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA added 8669</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA added Anonymous</logentry>
-<logentry>10/25/2017 01:55:42 PM Notes Standard Control/SASA updated -Default-</logentry>
-<logentry>10/25/2017 01:55:42 PM ADA3D/SASA added ADA3D/SASA</logentry>
-<logentry>10/25/2017 01:55:42 PM ADA3D/SASA updated role [Desarrollo]</logentry></acl>
+<aclentry name='866911860269' type='person' level='editor' deletedocs='true'
+ createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
+ createlsjavaagents='false'>
+<role>[usrInitial]</role></aclentry>
+<aclentry name='8669' type='persongroup' level='editor' deletedocs='true'
+ createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
+ createlsjavaagents='false'>
+<role>[Desarrollo]</role></aclentry>
+<logentry>26/10/2017 05:51:43 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated 866911860269</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated LocalDomainServers</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated LocalDomainAdmins</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated Anonymous</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added OtherDomainServers</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added LocalDomainServers</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added 866911860269</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added 8669</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added Anonymous</logentry>
+<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated -Default-</logentry>
+<logentry>10/26/2017 02:40:43 PM ADA3D/SASA added ADA3D/SASA</logentry>
+<logentry>10/26/2017 02:40:43 PM ADA3D/SASA added Notes Standard Control/SASA</logentry>
+<logentry>10/26/2017 02:40:43 PM ADA3D/SASA updated role [usrInitial]</logentry>
+<logentry>10/26/2017 02:40:43 PM ADA3D/SASA updated role [Desarrollo]</logentry>
+<logentry>10/26/2017 02:40:43 PM ADA3D/SASA updated -Default-</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='112' unid='85255A0A0010A6F0852556F00072875B' sequence='152'>
+<noteinfo noteid='112' unid='85255A0A0010A6F0852556F00072875B' sequence='163'>
 <created><datetime dst='true'>19871019T165057,55-04</datetime></created>
-<modified><datetime dst='true'>20171026T120817,37-02</datetime></modified>
-<revised><datetime dst='true'>20171026T120817,36-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171026T120817,37-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20171026T120752,85-02</datetime></addedtofile></noteinfo>
+<modified><datetime dst='true'>20171026T182124,62-02</datetime></modified>
+<revised><datetime dst='true'>20171026T182124,61-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171026T182124,62-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171026T182105,60-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Paul DiCristina/O=Iris</name><name>CN=Debbie Branco/O=Iris</name><name
+>CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
@@ -72,14 +81,14 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA==
 </rawitemdata></item>
 <item name='$DefaultXPage'><text>home.xsp</text></item>
 <item name='$DefaultFrameset'><text>Principal</text></item>
-<item name='$PIRCRefreshModTime'><datetime>20171025T203827,09-03</datetime></item>
-<item name='$TemplateModTime'><datetime dst='true'>20171025T203717,69-02</datetime></item>
-<item name='$TemplateServerName'><text>CN=ADA3D/O=SASA</text></item>
-<item name='$TemplateFileName'><text>/Ada3d/Lotus/Domino/Ada3d/L0000.ntf</text></item>
-<item name='$Daos'><text>0</text></item>
-<item name='$Flags'><text>J!fFnz2Z47q</text></item>
 <item name='$LaunchXPageRunOnServer'><text>0</text></item>
 <item name='$FlagsNoRefresh'><text/></item>
+<item name='$TemplateServerName'><text>CN=Notes Standard Control/O=SASA</text></item>
+<item name='$TemplateFileName'><text>CN=ADA3D/O=SASA!!L0000.ntf</text></item>
+<item name='$PIRCRefreshModTime'><datetime>20171026T150316,48-03</datetime></item>
+<item name='$TemplateModTime'><datetime dst='true'>20171026T150222,41-02</datetime></item>
+<item name='$Flags'><text>J!fFnz2Z47q</text></item>
+<item name='$Daos'><text>0</text></item>
 <item name='$TITLE'><text>Template L0000
 #1L0000v1r1</text></item></note>
 </database>
