--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
- replicaid='832581C5005B9E56' path='CN=ADA3D/O=SASA!!ACTIVAS\L8669.nsf' title='L8669'
+ replicaid='832581C60051ABDB' path='CN=ADA3D/O=SASA!!ACTIVAS\L8669.nsf' title='L8669'
  fromtemplate='L0000v1r1' allowstoredforms='false' maintainunread='false'
  optimizetablebitmaps='true' allowsoftdeletion='true' increasemaxfields='true'
  compressdesign='true' overwritefreespace='false' uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='832581C5005B9E56' odsversion='43' diskspace='1622016'
- percentused='89.5991161616162' numberofdocuments='4'><datamodified><datetime
- dst='true'>20171026T150000,09-02</datetime></datamodified><designmodified
-><datetime dst='true'>20171026T150237,20-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='832581C60051ABDB' odsversion='43' diskspace='1622016'
+ percentused='93.8289141414142' numberofdocuments='3'><datamodified><datetime
+ dst='true'>20171027T125918,78-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171027T152623,99-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -22,41 +22,44 @@
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
-<aclentry name='866911860269' type='person' level='editor' deletedocs='true'
- createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'>
+<aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='false'
+ writepublicdocs='false'>
 <role>[usrInitial]</role></aclentry>
-<aclentry name='8669' type='persongroup' level='editor' deletedocs='true'
+<aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
  createlsjavaagents='false'/>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated 866911860269</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated LocalDomainServers</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated LocalDomainAdmins</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated Anonymous</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added OtherDomainServers</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added LocalDomainServers</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added 866911860269</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added 8669</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA added Anonymous</logentry>
-<logentry>10/26/2017 02:40:43 PM Notes Standard Control/SASA updated -Default-</logentry>
-<logentry>10/26/2017 02:40:43 PM ADA3D/SASA added ADA3D/SASA</logentry>
-<logentry>10/26/2017 02:40:43 PM ADA3D/SASA added Notes Standard Control/SASA</logentry>
-<logentry>10/26/2017 02:40:43 PM ADA3D/SASA updated role [usrInitial]</logentry>
-<logentry>10/26/2017 02:40:43 PM ADA3D/SASA updated role [Desarrollo]</logentry>
-<logentry>10/26/2017 02:40:43 PM ADA3D/SASA updated -Default-</logentry></acl>
+<logentry>10/27/2017 12:58:34 PM 866911860269 updated 866911860269</logentry>
+<logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA updated 866911860269</logentry>
+<logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA updated LocalDomainServers</logentry>
+<logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA updated LocalDomainAdmins</logentry>
+<logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA updated Anonymous</logentry>
+<logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA added OtherDomainServers</logentry>
+<logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA added LocalDomainAdmins</logentry>
+<logentry>10/27/2017 12:52:04 PM Notes Standard Control/SASA added LocalDomainServers</logentry>
+<logentry>10/27/2017 12:52:04 PM Notes Standard Control/SASA added 866911860269</logentry>
+<logentry>10/27/2017 12:52:04 PM Notes Standard Control/SASA added 8669</logentry>
+<logentry>10/27/2017 12:52:04 PM Notes Standard Control/SASA added Anonymous</logentry>
+<logentry>10/27/2017 12:52:04 PM Notes Standard Control/SASA updated -Default-</logentry>
+<logentry>10/27/2017 12:52:04 PM ADA3D/SASA added ADA3D/SASA</logentry>
+<logentry>10/27/2017 12:52:04 PM ADA3D/SASA updated role [usrInitial]</logentry>
+<logentry>10/27/2017 12:52:04 PM ADA3D/SASA updated role [Desarrollo]</logentry>
+<logentry>10/27/2017 12:52:04 PM ADA3D/SASA added Notes Standard Control/SASA</logentry>
+<logentry>10/27/2017 12:52:04 PM ADA3D/SASA updated -Default-</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='160'>
+<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='173'>
 <created><datetime dst='true'>19871019T165057,55-04</datetime></created>
-<modified><datetime dst='true'>20171026T150237,20-02</datetime></modified>
-<revised><datetime dst='true'>20171026T150237,19-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171026T150237,20-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20171026T144043,41-02</datetime></addedtofile></noteinfo>
+<modified><datetime dst='true'>20171027T152622,14-02</datetime></modified>
+<revised><datetime dst='true'>20171027T152622,13-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171027T152622,14-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171027T125204,50-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Paul DiCristina/O=Iris</name><name>CN=Debbie Branco/O=Iris</name><name
+>CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
+>CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
+>CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
@@ -83,10 +86,10 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA==
 <item name='$FlagsNoRefresh'><text/></item>
 <item name='$TITLE'><text>L8669
 #2L0000v1r1</text></item>
+<item name='$PIRCRefreshModTime'><datetime>20171027T152701,63-03</datetime></item>
+<item name='$TemplateModTime'><datetime dst='true'>20171027T152503,30-02</datetime></item>
 <item name='$TemplateServerName'><text>CN=Notes Standard Control/O=SASA</text></item>
 <item name='$TemplateFileName'><text>CN=ADA3D/O=SASA!!L0000.ntf</text></item>
-<item name='$PIRCRefreshModTime'><datetime>20171026T150316,48-03</datetime></item>
-<item name='$TemplateModTime'><datetime dst='true'>20171026T150222,41-02</datetime></item>
 <item name='$Daos'><text>0</text></item>
 <item name='$Flags'><text>J!fFnz2Z47q</text></item></note>
 </database>
