--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -4,10 +4,10 @@
  fromtemplate='L0000v1r1' allowstoredforms='false' maintainunread='false'
  optimizetablebitmaps='true' allowsoftdeletion='true' increasemaxfields='true'
  compressdesign='true' overwritefreespace='false' uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='832581C60051ABDB' odsversion='43' diskspace='1622016'
- percentused='93.8289141414142' numberofdocuments='3'><datamodified><datetime
- dst='true'>20171027T125918,78-02</datetime></datamodified><designmodified
-><datetime dst='true'>20171027T152623,99-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='832581C60051ABDB' odsversion='43' diskspace='1843200'
+ percentused='86.5416666666667' numberofdocuments='4'><datamodified><datetime
+ dst='true'>20171030T175245,59-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171030T210224,81-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -22,12 +22,16 @@
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
-<aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='false'
- writepublicdocs='false'>
+<aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='true'
+ writepublicdocs='true'>
 <role>[usrInitial]</role></aclentry>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'/>
+ createlsjavaagents='false'>
+<role>[Desarrollo]</role></aclentry>
+<logentry>30/10/2017 03:56:25 PM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>10/30/2017 12:00:13 PM 866911860269 updated 866911860269</logentry>
+<logentry>30/10/2017 11:54:17 AM Notes Standard Control/SASA updated 866911860269</logentry>
 <logentry>10/27/2017 12:58:34 PM 866911860269 updated 866911860269</logentry>
 <logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>10/27/2017 12:52:05 PM Notes Standard Control/SASA updated 866911860269</logentry>
@@ -44,19 +48,19 @@
 <logentry>10/27/2017 12:52:04 PM ADA3D/SASA added ADA3D/SASA</logentry>
 <logentry>10/27/2017 12:52:04 PM ADA3D/SASA updated role [usrInitial]</logentry>
 <logentry>10/27/2017 12:52:04 PM ADA3D/SASA updated role [Desarrollo]</logentry>
-<logentry>10/27/2017 12:52:04 PM ADA3D/SASA added Notes Standard Control/SASA</logentry>
-<logentry>10/27/2017 12:52:04 PM ADA3D/SASA updated -Default-</logentry></acl>
+<logentry>10/27/2017 12:52:04 PM ADA3D/SASA added Notes Standard Control/SASA</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='173'>
+<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='175'>
 <created><datetime dst='true'>19871019T165057,55-04</datetime></created>
-<modified><datetime dst='true'>20171027T152622,14-02</datetime></modified>
-<revised><datetime dst='true'>20171027T152622,13-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171027T152622,14-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20171030T125450,07-02</datetime></modified>
+<revised><datetime dst='true'>20171030T125450,06-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171030T125450,07-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20171027T125204,50-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Paul DiCristina/O=Iris</name><name>CN=Debbie Branco/O=Iris</name><name
+>CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
