--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -1,13 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
 <database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
  replicaid='832581C60051ABDB' path='CN=ADA3D/O=SASA!!ACTIVAS\L8669.nsf' title='L8669'
- fromtemplate='L0000v1r1' allowstoredforms='false' maintainunread='false'
- optimizetablebitmaps='true' allowsoftdeletion='true' increasemaxfields='true'
- compressdesign='true' overwritefreespace='false' uselz1='true' nosimplesearch='true'>
+ allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
+ allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
+ uselz1='true' nosimplesearch='true'>
 <databaseinfo dbid='832581C60051ABDB' odsversion='43' diskspace='1843200'
- percentused='86.5416666666667' numberofdocuments='4'><datamodified><datetime
- dst='true'>20171030T175245,59-02</datetime></datamodified><designmodified
-><datetime dst='true'>20171030T210224,81-02</datetime></designmodified></databaseinfo>
+ percentused='86.625' numberofdocuments='4'><datamodified><datetime dst='true'>20171030T175245,59-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171031T103843,11-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -53,13 +52,14 @@
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='175'>
+<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='178'>
 <created><datetime dst='true'>19871019T165057,55-04</datetime></created>
-<modified><datetime dst='true'>20171030T125450,07-02</datetime></modified>
-<revised><datetime dst='true'>20171030T125450,06-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171030T125450,07-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20171031T082133,66-02</datetime></modified>
+<revised><datetime dst='true'>20171031T082133,65-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171031T082133,66-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20171027T125204,50-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Paul DiCristina/O=Iris</name><name>CN=Debbie Branco/O=Iris</name><name
+>CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
 >CN=ADA3D/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name><name
@@ -88,13 +88,13 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA==
 <item name='$DefaultFrameset'><text>Principal</text></item>
 <item name='$LaunchXPageRunOnServer'><text>0</text></item>
 <item name='$FlagsNoRefresh'><text/></item>
-<item name='$TITLE'><text>L8669
-#2L0000v1r1</text></item>
-<item name='$PIRCRefreshModTime'><datetime>20171027T152701,63-03</datetime></item>
-<item name='$TemplateModTime'><datetime dst='true'>20171027T152503,30-02</datetime></item>
-<item name='$TemplateServerName'><text>CN=Notes Standard Control/O=SASA</text></item>
-<item name='$TemplateFileName'><text>CN=ADA3D/O=SASA!!L0000.ntf</text></item>
+<item name='$PIRCRefreshModTime'><datetime dst='true'>20171031T020132,94-02</datetime></item>
+<item name='$TemplateModTime'><datetime dst='true'>20171030T213148,64-02</datetime></item>
+<item name='$TemplateServerName'><text>CN=ADA3D/O=SASA</text></item>
+<item name='$TemplateFileName'><text>/Ada3d/Lotus/Domino/Ada3d/L0000.ntf</text></item>
 <item name='$Daos'><text>0</text></item>
-<item name='$Flags'><text>J!fFnz2Z47q</text></item></note>
+<item name='$Flags'><text>J!fFnz2Z47q</text></item>
+<item name='$TITLE'><text>L8669
+</text></item></note>
 </database>
 
