--- a/L0000_v1r1/WebContent/WEB-INF/xsp.properties
+++ b/L0000_v1r1/WebContent/WEB-INF/xsp.properties
@@ -3,8 +3,7 @@ xsp.application.forcefullrefresh=true
 xsp.application.timeout=31
 xsp.client.script.radioCheckbox.ie.onchange.trigger=early-onclick
 xsp.client.validation=false
-xsp.error.page=error.xsp
-xsp.error.page.default=true
+xsp.error.page=debugToolbarErrorPage.xsp
 xsp.html.doctype=html
 xsp.library.depends=com.ibm.xsp.extlib.library,org.openntf.xsp.debugtoolbar.library
 xsp.min.version=9.0.1
@@ -12,3 +11,4 @@ xsp.persistence.mode=file
 xsp.resources.aggregate=false
 xsp.session.timeout=31
 xsp.theme=bootstrap4xpages.theme
+xsp.error.page.default=true
