--- a/L8669/.settings/org.eclipse.core.resources.prefs
+++ b/L8669/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Wed Nov 01 19:33:05 ART 2017
+#Thu Nov 02 20:27:39 ART 2017
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/awesome-bootstrap-checkbox.css=UTF-8
 encoding//Resources/StyleSheets/bootstrap-extended.css=UTF-8
 encoding//Resources/StyleSheets/bootstrapSubmenu.css=UTF-8
+encoding//Resources/StyleSheets/docs.min.css=UTF-8
 encoding//Resources/StyleSheets/loading.css=UTF-8
