--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
  replicaid='832581D0005236B2' path='CN=ADA3D/O=SASA!!ACTIVAS\L8669.nsf' title='L8669'
- fromtemplate='L0000v1r1' allowstoredforms='false' maintainunread='false'
- optimizetablebitmaps='true' allowsoftdeletion='true' increasemaxfields='true'
- compressdesign='true' overwritefreespace='false' uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='832581D0005236B2' odsversion='43' diskspace='2883584'
- percentused='90.8114346590909' numberofdocuments='3'><datamodified><datetime
- dst='true'>20171106T130123,56-02</datetime></datamodified><designmodified
-><datetime dst='true'>20171106T165000,07-02</datetime></designmodified></databaseinfo>
+ allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
+ allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
+ uselz1='true' nosimplesearch='true'>
+<databaseinfo dbid='832581D0005236B2' odsversion='43' diskspace='3145728'
+ percentused='88.3463541666667' numberofdocuments='18'><datamodified><datetime
+ dst='true'>20171106T211716,98-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171106T214255,89-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -50,11 +50,11 @@
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='287'>
+<noteinfo noteid='116' unid='85255A0A0010A6F0852556F00072875B' sequence='319'>
 <created><datetime dst='true'>19871019T165057,55-04</datetime></created>
-<modified><datetime dst='true'>20171106T165000,07-02</datetime></modified>
-<revised><datetime dst='true'>20171106T165000,06-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171106T165000,07-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20171106T214255,89-02</datetime></modified>
+<revised><datetime dst='true'>20171106T214255,88-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171106T214255,89-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20171106T125759,99-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name><name>CN=ADA3D/O=SASA</name><name
 >CN=Notes Standard Control/O=SASA</name></updatedby>
@@ -77,13 +77,13 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA==
 <item name='$DefaultXPage'><text>home.xsp</text></item>
 <item name='$LaunchXPageRunOnServer'><text>0</text></item>
 <item name='$FlagsNoRefresh'><text>rv</text></item>
-<item name='$TITLE'><text>L8669
-#2L0000v1r1</text></item>
 <item name='$TemplateServerName'><text>CN=Notes Standard Control/O=SASA</text></item>
 <item name='$TemplateFileName'><text>CN=ADA3D/O=SASA!!L0000.ntf</text></item>
-<item name='$PIRCRefreshModTime'><datetime>20171106T154512,53-03</datetime></item>
-<item name='$TemplateModTime'><datetime dst='true'>20171106T164942,06-02</datetime></item>
+<item name='$PIRCRefreshModTime'><datetime>20171106T170624,67-03</datetime></item>
+<item name='$TemplateModTime'><datetime dst='true'>20171106T180527,80-02</datetime></item>
 <item name='$Daos'><text>0</text></item>
-<item name='$Flags'><text>fJz247qZFn!</text></item></note>
+<item name='$Flags'><text>fJz247qZFn!</text></item>
+<item name='$TITLE'><text>L8669
+</text></item></note>
 </database>
 
