Final del dia Jueves

--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -4,10 +4,10 @@
  allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='832581D0005236B2' odsversion='43' diskspace='3145728'
- percentused='88.3463541666667' numberofdocuments='18'><datamodified><datetime
- dst='true'>20171106T211716,98-02</datetime></datamodified><designmodified
-><datetime dst='true'>20171106T214255,89-02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='832581D0005236B2' odsversion='43' diskspace='3670016'
+ percentused='87.1861049107143' numberofdocuments='18'><datamodified><datetime
+ dst='true'>20171109T132139,56-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171109T163530,12-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -27,7 +27,9 @@
 <role>[usrInitial]</role></aclentry>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'/>
+ createlsjavaagents='false'>
+<role>[Desarrollo]</role></aclentry>
+<logentry>09/11/2017 12:22:57 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>11/06/2017 12:01:34 PM 866911860269 updated 866911860269</logentry>
 <logentry>11/06/2017 11:58:00 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>11/06/2017 11:58:00 AM Notes Standard Control/SASA updated 866911860269</logentry>
