--- a/L8669/WebContent/WEB-INF/xsp.properties
+++ b/L8669/WebContent/WEB-INF/xsp.properties
@@ -6,7 +6,7 @@ xsp.client.validation=false
 xsp.error.page=error.xsp
 xsp.error.page.default=true
 xsp.html.doctype=html
-xsp.library.depends=com.ibm.xsp.extlib.library,org.openntf.xsp.debugtoolbar.library,com.jquery.library
+xsp.library.depends=com.ibm.xsp.extlib.library,com.jquery.library
 xsp.min.version=9.0.1
 xsp.persistence.mode=file
 xsp.resources.aggregate=false
