--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -5,9 +5,9 @@
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
 <databaseinfo dbid='832581D800495D1C' odsversion='52' diskspace='17301504'
- percentused='98.8162878787879' numberofdocuments='22'><datamodified><datetime
->20171115T175336,65-03</datetime></datamodified><designmodified><datetime
->20171116T192530,13-03</datetime></designmodified></databaseinfo>
+ percentused='46.3319720643939' numberofdocuments='21'><datamodified><datetime
+>20171121T100820,28-03</datetime></datamodified><designmodified><datetime
+>20171121T101706,92-03</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -25,10 +25,12 @@
 <aclentry name='Curso' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
- createlsjavaagents='false'/>
+ createlsjavaagents='false'>
+<role>[Desarrollo]</role></aclentry>
 <aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='false'
  writepublicdocs='false'>
 <role>[usrInitial]</role></aclentry>
+<logentry>21/11/2017 09:58:22 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>15/11/2017 04:18:01 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>15/11/2017 04:17:35 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>15/11/2017 03:54:43 PM Notes Standard Control/SASA updated Curso</logentry>
@@ -45,7 +47,6 @@
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated -Default-</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated role [usrInitial]</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated role [Desarrollo]</logentry>
-<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry></acl>
