--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -4,10 +4,10 @@
  allowstoredforms='false' maintainunread='false' optimizetablebitmaps='true'
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
-<databaseinfo dbid='832581D800495D1C' odsversion='52' diskspace='17301504'
- percentused='46.3319720643939' numberofdocuments='21'><datamodified><datetime
->20171121T100820,28-03</datetime></datamodified><designmodified><datetime
->20171121T101706,92-03</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='832581D800495D1C' odsversion='43' diskspace='12845056'
+ percentused='24.5196906887755' numberofdocuments='19'><datamodified><datetime
+ dst='true'>20171114T112123,96-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171121T105553,09-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -22,7 +22,6 @@
 <aclentry name='CN=ADA3D/O=SASA' type='server' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='LocalDomainAdmins' type='persongroup' level='manager' deletedocs='true'/>
-<aclentry name='Curso' type='persongroup' level='manager' deletedocs='true'/>
 <aclentry name='8669' type='persongroup' level='editor' deletedocs='false'
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
  createlsjavaagents='false'>
@@ -30,11 +29,8 @@
 <aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='false'
  writepublicdocs='false'>
 <role>[usrInitial]</role></aclentry>
-<logentry>21/11/2017 09:58:22 AM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>15/11/2017 04:18:01 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>15/11/2017 04:17:35 PM Notes Standard Control/SASA updated 8669</logentry>
-<logentry>15/11/2017 03:54:43 PM Notes Standard Control/SASA updated Curso</logentry>
-<logentry>15/11/2017 03:54:39 PM Notes Standard Control/SASA added Curso</logentry>
+<logentry>21/11/2017 09:56:17 AM Notes Standard Control/SASA updated 8669</logentry>
+<logentry>21/11/2017 09:36:31 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated ADA3D/SASA</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA added 8669</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA added 866911860269</logentry>
@@ -47,6 +43,9 @@
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated -Default-</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated role [usrInitial]</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated role [Desarrollo]</logentry>
+<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
+<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
+<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry></acl>
@@ -81,12 +80,12 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA==
 <item name='$TemplateFileName'><text>CN=ADA3D/O=SASA!!L0000.ntf</text></item>
 <item name='$PIRCRefreshModTime'><datetime>20171106T170624,67-03</datetime></item>
 <item name='$TemplateModTime'><datetime dst='true'>20171106T180527,80-02</datetime></item>
+<item name='$Daos'><text>0</text></item>
+<item name='$LargeSummary'><text>0</text></item>
 <item name='$DefaultFrameset'><text>Principal</text></item>
 <item name='$DefaultXPage'><text>home.xsp</text></item>
 <item name='$TITLE'><text>L8669</text></item>
-<item name='$FlagsNoRefresh'><text>rv</text></item>
-<item name='$Daos'><text>0</text></item>
-<item name='$LargeSummary'><text>0</text></item>
-<item name='$Flags'><text>fJz247qZFn!</text></item></note>
+<item name='$Flags'><text>fJz247qZFn!</text></item>
+<item name='$FlagsNoRefresh'><text>rv</text></item></note>
 </database>
 
