--- a/L8669/plugin.xml
+++ b/L8669/plugin.xml
@@ -20,7 +20,7 @@
     <import optional="true" plugin="com.ibm.xsp.rcp"/>
     <import optional="true" plugin="com.ibm.xsp.extlib"/>
     <import optional="true" plugin="com.jquery"/>
-    <import optional="true" plugin="org.openntf.domino.xsp"/>
+    <import optional="true" plugin="com.ibm.xsp.extlib.relational"/>
     <!--AUTOGEN-END-BUILDER: End of automatically generated section-->
   </requires>
 </plugin>
