--- a/L8669/.settings/org.eclipse.core.resources.prefs
+++ b/L8669/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,9 @@
-#Fri Nov 10 08:16:09 ART 2017
+#Mon Dec 04 14:49:36 ART 2017
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/a2_docs.min.css=UTF-8
 encoding//Resources/StyleSheets/bootstrap-extended.css=UTF-8
+encoding//Resources/StyleSheets/bootstrap-toggle.min.css=UTF-8
 encoding//Resources/StyleSheets/bootstrapSubmenu.css=UTF-8
+encoding//Resources/StyleSheets/buttonSwitch.css=UTF-8
 encoding//Resources/StyleSheets/home_Main.min.css=UTF-8
 encoding//Resources/StyleSheets/sinUso_2fawesome-bootstrap-checkbox.css=UTF-8
