--- a/L8669/AppProperties/database.properties
+++ b/L8669/AppProperties/database.properties
@@ -5,9 +5,9 @@
  allowsoftdeletion='true' increasemaxfields='true' compressdesign='true' overwritefreespace='false'
  uselz1='true' nosimplesearch='true'>
 <databaseinfo dbid='832581D800495D1C' odsversion='52' diskspace='17301504'
- percentused='52.2623697916667' numberofdocuments='42'><datamodified><datetime
->20171127T151547,68-03</datetime></datamodified><designmodified><datetime
- dst='true'>20171128T154400,51-02</datetime></designmodified></databaseinfo>
+ percentused='45.0239701704545' numberofdocuments='9'><datamodified><datetime
+ dst='true'>20171130T141403,60-02</datetime></datamodified><designmodified
+><datetime dst='true'>20171130T162018,21-02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=ADA3D/O=SASA' maxinternetaccess='editor'>
 <role>[Desarrollo]</role>
 <role>[usrInitial]</role>
@@ -27,9 +27,11 @@
  createpersonalagents='false' createpersonalviews='false' createsharedviews='false'
  createlsjavaagents='false'>
 <role>[Desarrollo]</role></aclentry>
-<aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='false'
- writepublicdocs='false'>
+<aclentry name='866911860269' type='person' level='noaccess' readpublicdocs='true'
+ writepublicdocs='true'>
 <role>[usrInitial]</role></aclentry>
+<logentry>11/30/2017 12:55:26 PM 866911860269 updated 866911860269</logentry>
+<logentry>30/11/2017 12:32:40 PM Notes Standard Control/SASA updated 866911860269</logentry>
 <logentry>24/11/2017 09:54:02 AM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>22/11/2017 02:22:24 PM Notes Standard Control/SASA updated 8669</logentry>
 <logentry>21/11/2017 09:58:22 AM Notes Standard Control/SASA updated 8669</logentry>
@@ -47,9 +49,7 @@
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA added Anonymous</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA added OtherDomainServers</logentry>
 <logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated -Default-</logentry>
-<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated role [usrInitial]</logentry>
-<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated role [Desarrollo]</logentry>
-<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA deleted role </logentry></acl>
+<logentry>14/11/2017 10:23:54 AM Notes Standard Control/SASA updated role [usrInitial]</logentry></acl>
 
 <launchsettings><noteslaunch whenopened='openframeset' frameset='Principal'
  showaboutdocument='never'/><weblaunch whenopened='openxpage' xpage='home.xsp'/></launchsettings>
