--- a/L8669/WebContent/WEB-INF/xsp.properties
+++ b/L8669/WebContent/WEB-INF/xsp.properties
@@ -9,7 +9,7 @@ xsp.html.doctype=html
 xsp.library.depends=com.ibm.xsp.extlib.library,com.jquery.library,org.openntf.domino.xsp.XspLibrary
 org.openntf.domino.xsp=khan
 xsp.min.version=9.0.1
-xsp.persistence.mode=file
+xsp.persistence.mode=basic
 xsp.resources.aggregate=false
 xsp.session.timeout=31
 xsp.theme=bootstrap4xpages.theme
