--- a/L8669/WebContent/WEB-INF/xsp.properties
+++ b/L8669/WebContent/WEB-INF/xsp.properties
@@ -1,6 +1,6 @@
 xsp.ajax.renderwholetree=false
 xsp.application.forcefullrefresh=true
-xsp.application.timeout=31
+xsp.application.timeout=12
 xsp.client.script.radioCheckbox.ie.onchange.trigger=early-onclick
 xsp.client.validation=false
 xsp.error.page=error.xsp
@@ -10,6 +10,6 @@ xsp.library.depends=com.ibm.xsp.extlib.library,com.jquery.library,org.openntf.do
 org.openntf.domino.xsp=khan
 xsp.min.version=9.0.1
 xsp.persistence.mode=basic
-xsp.resources.aggregate=false
-xsp.session.timeout=31
+xsp.resources.aggregate=true
+xsp.session.timeout=12
 xsp.theme=bootstrap4xpages.theme
