--- a/L8669/WebContent/WEB-INF/xsp.properties
+++ b/L8669/WebContent/WEB-INF/xsp.properties
@@ -3,8 +3,7 @@ xsp.application.forcefullrefresh=true
 xsp.application.timeout=32
 xsp.client.script.radioCheckbox.ie.onchange.trigger=early-onclick
 xsp.client.validation=false
-xsp.error.page=error.xsp
-xsp.error.page.default=true
+xsp.error.page=debugToolbarErrorPage.xsp
 xsp.html.doctype=html
 xsp.library.depends=com.ibm.xsp.extlib.library,com.jquery.library,org.openntf.domino.xsp.XspLibrary
 org.openntf.domino.xsp=khan
@@ -13,3 +12,4 @@ xsp.persistence.mode=basic
 xsp.resources.aggregate=true
 xsp.session.timeout=32
 xsp.theme=bootstrap4xpages.theme
+xsp.error.page.default=true
